Fix Home hero slide title alignment

--- a/assets/sass/blocks/_home-hero.scss
+++ b/assets/sass/blocks/_home-hero.scss
@@ -23,6 +23,7 @@
          justify-content: center;
          align-items: center;
          height: 50px;
+         text-align: center;
       }
    }
 
